Fixed bug where the dark mode wasnt applied when rendering dynamic objects

--- a/public/src/styles/resultsSection.css
+++ b/public/src/styles/resultsSection.css
@@ -69,7 +69,7 @@ li div.info-container
 {
     padding: 40px;
     width: 600px;
-    background-color: none;
+    background-color: $whiteBackground;
     padding-bottom: 40px;
     -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
